my first website

--- a/tut2/index2.html
+++ b/tut2/index2.html
@@ -6,18 +6,62 @@
     <title>WebWizard</title>
     <link rel="icon" type="image/x-icon" href="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEhpraZX-ausfGJ2wFTHyqkgJj5ude2F9fshrAb2KT6knSFrHetoCgoyMVXMF5vv-GNwKtSxcg9RA9BlDMdNJ5GNYn3OMCaC5-e6w6ZJ5nrLHLsgcHKmzGzx1S1ncMKh671DLQ9Yg88GNq_sr_7x-PfvAmJ6eocJSOW87qr04VwRcl5MzaOwBMTHIL4LKks/s320/logo.png">
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
     <div class="navbar">
         <div class="nav-left">
-            <h1>Logo here</h1>
+            <img class="logo" src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEgYxRC6ylNceTLjSgO4dNTnpvR97ErHuiPjUR4G3iW1Z6nQB14XdrFmHRHnLcCOFNtd2ohlmfLH5IwX8tc9WD1b-VL_rbqrQxDENBw4sG1FPxxA9dmkeb9OPOUyxOnHMo2yB_J2PkXU6u_18QwalD9pZu5qpQLC0cFW8J-BBLXMbvC225AvBMzJJKzNqKY/s320/logo-removebg-preview.png">
         </div>
         <div class="nav-right">
             <a class="a-element">Home</a>
             <a class="a-element">About</a>
-            <a class="a-element">GitHub</a>
+            <a class="a-element" href="https://github.com/Shankar-tech7" target="_blank" style="text-decoration:none; color:white;">GitHub</a>
         </div>
     </div>
-    
+</br>
+        <div class="image">
+            <img src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEikvSlc3v0-mK5uzSsMpaTT8goODal7DH620gmMyJ1qvakqn6s9r5xF9wzk4-5TBA4ZqzO0ql8_-VYa6McNwMDQ1Iotqbxuoy5uYzl8RH8KVAmC5sx7dPTOyFJsiHotRcjNs53sex9ysdshKsxzUO4c92n5uFnA9_6ZogqN0k5DclMvDSnhWDrxrFegYD0/s320/Shankar-modified.png">
+        </div>
+    </br>
+    <div class="bio">
+        <p>I'm Shankar, a tech enthusiast with a strong commitment to knowledge sharing and innovation. I wear multiple hats as a YouTuber and Instagram tech influencer, where I focus on teaching coding, MERN Stack development, and engaging in in-depth discussions about the ever-evolving tech landscape. My genuine love for AI adds an extra layer of excitement to my tech journey. 
+            My journey doesn't stop at content creation; I'm also a motivational speaker, driven by the belief that the right mindset can be a catalyst for personal and professional growth.</p>
+        </div>
+<div class="about-container">
+<h1 class="ser-heading">SERVICES WE PROVIDE</h1>  
+<div class="sub-about-container">
+    <div class="info-1">
+<h1>Web Designing</h1>
+<p>nenu manchi manchi websites design chestha</p>
+</div>
+<div class="info-1">
+<h1>Video Editing</h1>
+<p>nenu manchi mani videos edit chestha</p>
+</div>
+<div class="info-1">
+        <h1>Photo Editing</h1>
+    <p>nenu manchi mani videos edit chestha</p>
+    </div>
+</div>
+</div>
+</br>
+<div class="last">
+<h1>INKA NA GURINCHI SODHI ANTHE<h1>
+</div>
+</br>
+<div class="icons">
+    <div class="sub-icons">
+<div class="icon-1">
+    <a href="https://www.instagram.com/"> <i class="fa-brands fa-instagram"></i></a>
+    </div>
+    <div class="icon-1">
+    <i class="fa-brands fa-facebook"></i>
+    </div>
+    <div class="icon-1">
+    <i class="fa-brands fa-twitter"></i>
+    </div>
+</div>
+</div>
 </body>
 </html>
